added skills for sub-agent steering

--- a/config.example.json
+++ b/config.example.json
@@ -5,5 +5,7 @@
   "organize_by": "genre_artist",
   "max_filename_length": 120,
   "max_concurrent_downloads": 3,
-  "default_genre": "Unknown"
+  "default_genre": "Unknown",
+  "client_id": "YOUR_GOOGLE_OAUTH_CLIENT_ID",
+  "client_secret": "YOUR_GOOGLE_OAUTH_CLIENT_SECRET"
 }
