feat: add --verbose logging, 'ymd doctor' command, and config.example.json
- Global --verbose/-v flag configures structured logging (DEBUG level)
- 'ymd doctor' runs 7 health checks: config, OAuth creds, OAuth
  tokens, yt-dlp, ffmpeg, download dir, and API connection
- --skip-api flag for offline doctor checks
- config.example.json template with all fields documented
- 10 new tests for doctor command

--- a/config.example.json
+++ b/config.example.json
@@ -6,6 +6,6 @@
   "max_filename_length": 120,
   "max_concurrent_downloads": 3,
   "default_genre": "Unknown",
-  "client_id": "YOUR_GOOGLE_OAUTH_CLIENT_ID",
-  "client_secret": "YOUR_GOOGLE_OAUTH_CLIENT_SECRET"
+  "client_id": "",
+  "client_secret": ""
 }
